# MediaDownloaderTelegramBot

./: README.md  main.py  pyproject.toml  requirements.txt
src/app/: __init__.py  bot.py  callback_handlers.py  common.py  filters.py  handlers.py  patterns.py
src/core/: __init__.py  abstractions.py  instagram.py  reddit.py  rutube.py  tiktok.py  youtube.py
src/databases/: __init__.py  media_storage.py  redis_base.py  user_activity_queue.py  user_storage.py
src/tasks/: app.py  common.py  downloads_worker.py  information_worker.py  telegram_client.py
