[project]
name = "mediadownloadertelegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "gallery-dl>=1.30.8",
    "instaloader>=4.14.2",
    "praw>=7.8.1",
    "pydantic-settings>=2.11.0",
    "yt-dlp>=2025.9.26",
]
