[project]
name = "mediadownloadertelegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "billiard==4.2.2",
    "celery[redis]==5.5.3",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "gallery-dl==1.30.8",
    "idna==3.10",
    "instaloader==4.14.2",
    "kombu==5.5.4",
    "packaging==25.0",
    "praw==7.8.1",
    "prawcore==2.4.0",
    "prompt-toolkit==3.0.52",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "redis==5.2.1",
    "requests==2.32.5",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "update-checker==0.18.0",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wcwidth==0.2.14",
    "websocket-client==1.8.0",
    "yt-dlp==2025.9.26",
]
